--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,12 @@ factory-boy==2.12.0
 coverage==4.5.4
 pylint>=2.4.1
 
+# Behavior Driven Development
+behave==1.2.6
+selenium==3.141.0
+compare==0.2b0
+requests==2.22.0
+
 # Code coverage --- portion copied from lab-travis-ci 
 #coverage==4.5.4
 codecov==2.0.15
