--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ psycopg2-binary==2.8.3
 python-dotenv==0.10.3
 honcho==1.0.1
 httpie==1.0.3
+factory-boy==2.12.0
+cloudant==2.12.0
+gunicorn==19.9.0
 
 # Testing
 nose==1.3.7
@@ -22,5 +25,5 @@ compare==0.2b0
 requests==2.22.0
 
 # Code coverage --- portion copied from lab-travis-ci 
-#coverage==4.5.4
+coverage==4.5.4
 codecov==2.0.15
